--- a/index.html
+++ b/index.html
@@ -1,56 +1,98 @@
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <title>æœˆåŠå°å›</title>
-
-    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
-    <meta http-equiv="description" content="this is my page">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-    <!--<link rel="stylesheet" type="text/css" href="./styles.css">-->
-
-           <style type="text/css">
-            *{
-                margin: 0px;
-                padding: 0px;
-            }
-            video{
-                position: fixed;
-                right: 0px;
-                bottom: 0px;
-                min-width: 100%;
-                min-height: 100%;
-                height: 100%;
-                width: 100%; 
-	     /* height: auto;*/
-             /* width: auto;*/
-                /*åŠ æ»¤é•œ*/
-              /*  -webkit-filter: grayscale(100%);
-                filter:grayscale(100%);*/
-            }
-            source{
-                min-width: 100%;
-                min-height: 100%;
-                height: auto;
-                width: auto;
-            }
-        </style>
-
-  </head>
-
-  <body >
-
-
-
-     <video autoplay="autoplay" loop="loop">
-        <source  src="https://cloud.video.taobao.com/play/u/3909397112/p/1/e/6/t/1/50162156082.mp4"  controls="controls" loop = "loop" autoplay = "autoplay" >;
-
-    <!-- <video src="../../res/lige.mp4"  controls="controls" loop = "loop" autoplay = "autoplay">
-   æ‚¨çš„æµè§ˆå™¨ä¸æ”¯æŒ video æ ‡ç­¾ã€‚
- </video> -->
-
-
-  </body>
+<head>
+<meta charset="gb2312">
+<title>ÎÄÐ¡Î÷¡ª¡ª¹Åµä¸öÈË²©¿ÍÄ£°å</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="css/styles.css" rel="stylesheet">
+<!--[if lt IE 9]>
+<script src="js/modernizr.js"></script>
+<![endif]-->
+</head>
+<body>
+<article>
+  <header>
+    <div class="toptitle">
+      <h1>ÇÕµãÐ¡Î÷</h1>
+      <p class="byline">¡ª¡ªÎÄÐ¡Î÷</p>
+    </div>
+    <object id="swftitlebar" data="images/79514.swf" width="100%" height="220" type="application/x-shockwave-flash">
+      <param name="allowScriptAccess" value="always">
+      <param name="allownetworking" value="all">
+      <param name="allowFullScreen" value="true">
+      <param name="wmode" value="transparent">
+      <param name="menu" value="false">
+      <param name="scale" value="noScale">
+      <param name="salign" value="1">
+    </object>
+    <p class="sign">                ÎÒ¶Ô×Ô¼ºµÄÒªÇóºÜµÍ£ºÎÒ»îÔÚÊÀÉÏ£¬ÎÞ·ÇÏëÒªÃ÷°×Ð©µÀÀí£¬Óö¼ûÐ©ÓÐÈ¤µÄÊÂ!</p>
+  </header>
+  <div class="leftbox">
+    <div class="vcard box">
+      <h2>¸öÈË×ÊÁÏ</h2>
+      <img src="images/180.jpg" class="photo">
+      <p class="fn">ÐÕÃû£ºÎÄÜç</p>
+      <p class="nickname">ÍøÃû£ºSmileÐ¡Î÷ | ÇÕµãÐ¡Î÷</p>
+      <p class="url">Ö÷Ò³£ºwww.yangqq.com</p>
+      <p class="address">ÏÖ¾Ó£ºËÄ´¨Ê¡¡ª³É¶¼ÊÐ</p>
+      <p class="role">Ö°Òµ£ºÍøÕ¾Éè¼Æ¡¢ÍøÕ¾ÖÆ×÷</p>
+    </div>
+    <div class="blogclass box">
+      <h2>²©¿Í·ÖÀà</h2>
+      <ul>
+        <li><a href="/">ÂýÉú»î(3)</a></li>
+        <li><a href="/">³ÌÐòÈËÉú(25)</a></li>
+        <li><a href="/">¾­µäÃÀÎÄ(39)</a></li>
+      </ul>
+    </div>
+    <div class="friends box">
+      <h2>×î½ü·Ã¿Í</h2>
+      <ul>
+        <li><a href="/"><img src="images/01.jpg"></a></li>
+        <li><a href="/"><img src="images/s3.jpg"></a></li>
+        <li><a href="/"><img src="images/s0.jpg"></a></li>
+        <li><a href="/"><img src="images/s2.jpg"></a></li>
+        <li><a href="/"><img src="images/s5.jpg"></a></li>
+        <li><a href="/"><img src="images/s6.jpg"></a></li>
+        <li><a href="/"><img src="images/s7.jpg"></a></li>
+        <li><a href="/"><img src="images/s8.jpg"></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="rightbox box">
+    <h2>×îÐÂ²©ÎÄ</h2>
+    <h3 class="title"><a href="/">Ä°ÉÏ»¨¿ª£¬¿É»º»º¹éÒÓ</a></h3>
+    <ul class="text">
+      <p>¡°Ä°ÉÏ»¨¿ª£¬¿É»º»º¹éÒÓ¡£¡± º¬Òå£º£¨·òÈË£©£¬Ìï¼äÚäÄ°ÉÏµÄ»¨¿ªÁË£¬Äã¿ÉÒÔÒ»±ßÉÍ»¨£¬Ò»±ßÂýÂýµØ»ØÀ´¡£</p>
+      <p>¡°Ä°ÉÏ»¨¿ª£¬Èç¹ûÃ»ÓÐÇÄÈ»ØùÁ¢ÚäÄ°²¢ÎªÄ°ÉÏ·çÇéËùÌÕ×íµÄÈË£¬ÄÇÃ´»¨¿ªÒ²¼ÅÄ¯£¬·çÇéÒ²²Ô°×....¡±Ï²»¶Õâ¾ä»°£¬ÊÇÒòÎª¿´ÁËÈÌ¶¬µÄ×÷Æ·¡¶Ä°ÉÏ»¨¿ª»º»º¹é¡·</p>
+      <p>Ñô´ºÈýÔÂ£¬·çºÍÈÕÅ¯£¬ÐÅ²½³ÇÍâ£¬¿´ÚäÄ°Ö®ÉÏµÄÑîÁøÒÀÒÀ£¬Ò°»¨Ñ¤ÀÃ£¬ÉíÐÄ²»ÓÉµÃÇáË¬¶øÀËÂþ¡£¡°ÈýÔÂ·çÇéÄ°ÉÏ»¨¡±£¬¹ÅÔ¶µÄÊ«¾äËÆºõËæ·ç´ÓÌì±ßÆ®À´£¬´ÓÀúÊ·µÄÉî´¦Æ®À´£¬·÷¹ýÚäÄ°£¬Ï®ÉÏÐÄÍ·£¬Ê«ÊÇÊôÓÚÇåÇ¬¼ÎÊ«ÈËÕÔÒíµÄ£¬¿É°ºÊ×Ô¶Íû£¬ÑÛÇ°µÄÄ°ÉÏ·çÇéÈ´ÊÇ²»ÕÛ²»¿ÛµÄÏÖ´ú£¬ÓÉÑÛÁ±ÈëÐÄìé¡£</p>
+      <p class="textimg"><img src="images/text02.jpg"></p>
+      <p>Âþ²½Ä°ÉÏ£¬ÐÄÇéÊÇÊ«ÒâµÄÄÇÖÖ£¬ÓÅÑÅ¶øÉ¢µ­£¬²»ÈÇ´Ò´Ù£¬Ö»ÒòÄ°ÉÏ»¨¿ª£»»¨ÊÇ×ÔÈ»µÄÄÇÖÖ£¬ÆÓËØ¶øÌñµ­£¬²»Âä³¾Ë×¡£¡°ÈýÔÂ·çÇéÄ°ÉÏ»¨¡±£¬ÊÇ»¨ÔÚÆäÖÐÉúÃüµÃÒÔè­è²£¬ÈËÔÚÆäÖÐÐÄÇéµÃÒÔ³©È»µÄÒ»ÖÖÒâ¾³¡£ÈýÔÂÄ°ÉÏ»¨£¬ÈÃÈË°®ÈÃÈË³Õ£¬»Ðã±ÈËµÄ¹Ç×ÓÀïÍ·¶¼³ÁµíÁË»¨µÄÓ°×Ó£¬»¨µÄ·çÔÏ¡£</p>
+      <p>Ä°ÉÏ»¨¿ª£¬Èç¹ûÃ»ÓÐÁË´ÓË×ÀÛµÄÉú»îÖÐ×ß³öÀ´£¬ÇÄÈ»ØùÁ¢ÚäÄ°²¢ÎªÄ°ÉÏ·çÇéËùÌÕ×íµÄÈË£¬ÄÇÃ´»¨¿ªÒ²¼ÅÄ¯£¬·çÇéÒ²²Ô°×¡£ÓÚÊÇ£¬Ò»¾ä¡°Ä°ÉÏ»¨¿ª£¬¿É»º»º¹éÒÓ¡±²»Öª±»¶àÉÙÈËÒ÷ËÐÁË¶àÉÙ±é¡£ÈË¹é»º»º£¬ÄÇ»¨±ãÓÐÁéÐÔ£¬±ã¿ªµÃÖ´Öø£¬Ä°ÉÏ·çÇéÒ²±»ÁÃ²¦µÃÅ¨Óô¶øÈÈÁÒ¡£</p>
+      <p>»º»º¹é£¬»º»º¹é£¬ÅûÒ»Ï®¡°ÈýÔÂ·çÇé¡±£¬ÔÙ²ÉÒ»Êø¡°Ä°ÉÏ»¨¡±£¬»º»º¹é¡£</p>
+      <p>»º»º¹éÒÓ£¬ÎÒÐÄÒÑÊÇÄ°ÉÏ»¨¿ª¡£</p>
+    </ul>
+    <div class="textfoot"> <a href="/">ÔÄ¶ÁÈ«ÎÄ</a><a href="/">ÆÀÂÛ</a><a href="/">×ªÔØ</a> </div>
+    <h3 class="title"><a href="/">ËêÔÂÁôºÛ¡ª¡ªÎÒµÄ2017</a></h3>
+    <ul class="text">
+      <p>AÃæ¡ª¡ªËêÔÂÁôºÛÖ®Ê±¹â</p>
+      <p>Ã¿·êÐÂ¾ÉÄê½»ÌæÊ±ºò£¬ÎÒ¾Í±»ÁýÕÖÔÚÒ»¹ÉÃ£È»µÄË¼Ð÷Àï£¬ÌÓÒ²ÌÓ²»ÍÑ£¬±ÜÒ²±Ü²»¿ª£¬Î¨ÓÐÈÃÐÄÊÂÔÚ¾²¾²Á÷ÊÅµÄÊ±¹âÀï²ÔÃ£³ÉºÓ¡£</p>
+      <p>ÊÇ´ÓÊ²Ã´Ê±ºò¿ªÊ¼µÄÄØ£¬ÎÒÓÖ±äµÃÈç´Ë¸ÐÊ±ÉË»³£¿ÎÒºÜÏÛÄ½ÄÇÐ©ÔÚÄêÖÕÅÌµã×Ü½áµÄÈËÃÇ£¬¹ýÈ¥µÄÒ»ÄêÓÚËûÃÇÀ´Ëµ£¬ÊÇ´óµ¶À«¸«µÄÒ»Äê£¬ÊÇË¶¹ûÀÛÀÛµÄÒ»Äê¡£ÔÙ²»¼ÃµÄ»°£¬Ò²ÊÇºÀÇéÍòÕÉµÄÒ»Äê¡£¶øÔÚÎÒÄÇÊÅÈ¥µÄÊ±¹âÀï£¬Æ½¾²ÈçË®£¬²»ÆðÒ»Ë¿²¨À½£¬Ò»ÄêÓÖÒ»Äê¡£ÎÒÃ»ÓÐÅÌµã£¬ÒòÎªÎÒÃ»ÓÐ²¨À½×³À«£»ÎÒ²»»áÈ¥×Ü½á£¬ÒòÎªÎÒµÄ×Ü½á´ÓÀ´¾ÍÃ»ÓÐ±Æ½üÎÒµÄÐÄÁé¡£ÎÒÖªµÀÕâÓÚÎÒÀ´Ëµ£¬ÏÔµÃ¶àÃ´ÎÞÀåÍ·¡£</p>
+      <p class="textimg"><img src="images/text01.jpg"></p>
+      <p>ÎÒÏ²»¶ÕâÑù°²¾²µØ×øÏÂÀ´£¬ÏëÒ»Ð©ËÆÓÐÈôÎÞµÄÐÄÊÂ¡£¾¡Á¿²»È¥ÏëÄÇÐ©·ÉÊÅµÄÊ±¹â£¬¾¡Á¿²»È¥ÏëÄÇÐ©ÐÎÉ«´ÒÃ¦µÄ½Å²½£¬ËÆºõÊÇÔÚº¦ÅÂ£¬ÔÚÕâ¸ßËÙÔË×ªµÄÊ±¿ÕÀï£¬×Ô¼ºÓÐÒ»Ìì»á»¯×÷Ò»¶ÑÐéÎÞ¡£»¹¼ÇµÃÄÇÒ»²¿¡¶ËêÔÂÉñÍµ¡·µÄµçÓ°Âð£¿ÕæÊÇÒª¸ÐÐ»À´×ÔÏã¸ÛµÄµ¼ÑÝÂÞÆôÈñ£¬Ó°Æ¬¸øÎÒÃÇÜ¿Ü¿ÖÚÉúÁôÏÂÌ«¶àµÄßñÐê¡£ÔÚÈçË®Ò»°ãÊÅÈ¥µÄÊ±¹âÀï£¬ÖåÎÆÅÀÉÏÄãµÄÑÛ½Ç£¬°×·¢ÂûÑÓÎÒµÄË«÷Þ¡£ËêÔÂ²ÅÊÇ×îºÃµÄÉñÍµ£¬Íµ×ßÁËÎÒµÄÇà´ººÍÄãµÄÃÀºÃ¡£</p>
+      <p>¾ÍÈÎÕâÊ±¹âÂýÂýÁ÷ÌÊ°É£¬¶ÔÓÚ´ó¶àÊýÈËÀ´Ëµ£¬ÎÒÃÇÎÞ·Ç¾ÍÊÇºÆå«Ê±¿ÕµÄÒ»Ð©Î¢³¾¡£»¢Äê×ßÁËÓÖÔõÑù</p>
+    </ul>
+    <div class="textfoot"> <a href="/">ÔÄ¶ÁÈ«ÎÄ</a><a href="/">ÆÀÂÛ</a><a href="/">×ªÔØ</a> </div>
+    <div class="pages"><span>1</span><a href="/" hidefocus="">2</a><a href="/" hidefocus="">3</a><a href="/" class="next">ÏÂÒ»Ò³&gt;&gt;</a></div>
+  </div>
+  <div class="blank"></div>
+  <div class="Copyright">
+    <ul>
+      <a href="/">°ïÖúÖÐÐÄ</a><a href="/">¿Õ¼ä¿Í·þ</a><a href="/">Í¶ËßÖÐÐÄ</a><a href="/">¿Õ¼äÐ­Òé</a>
+    </ul>
+    <p>Xiao Xi Smile</p>
+  </div>
+</article>
+</body>
 </html>
