--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img src="images/180.jpg" class="photo">
       <p class="fn">姓名：文茜</p>
       <p class="nickname">网名：Smile小西 | 钦点小西</p>
-      <p class="url">主页：www.yangqq.com</p>
+      <p class="url">主页：http://wenxiaoxi.club/</p>
       <p class="address">现居：四川省—成都市</p>
       <p class="role">职业：网站设计、网站制作</p>
     </div>
@@ -84,12 +84,12 @@
       <p>就任这时光慢慢流淌吧，对于大多数人来说，我们无非就是浩瀚时空的一些微尘。虎年走了又怎样</p>
     </ul>
     <div class="textfoot"> <a href="/">阅读全文</a><a href="/">评论</a><a href="/">转载</a> </div>
-    <div class="pages"><span>1</span><a href="/" hidefocus="">2</a><a href="/" hidefocus="">3</a><a href="/" class="next">下一页&gt;&gt;</a></div>
+    <div class="pages"><span>1</span><a href="http://huangwenjun.work" hidefocus="">2</a><a href="/" hidefocus="">3</a><a href="/" class="next">下一页&gt;&gt;</a></div>
   </div>
   <div class="blank"></div>
   <div class="Copyright">
     <ul>
-      <a href="/">帮助中心</a><a href="/">空间客服</a><a href="/">投诉中心</a><a href="/">空间协议</a>
+      <a href="/">帮助中心</a><a href="/">私人客服</a><a href="/">投诉中心</a><a href="/">空间协议</a>
     </ul>
     <p>Xiao Xi Smile</p>
   </div>
