--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <article>
+	<embed src="http://pic.ibaotu.com/00/21/48/31X888piCcxU.mp3" hidden="true" autostart="true" loop="true">
   <header>
     <div class="toptitle">
       <h1>钦点小西</h1>
