--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-<title>文小西——古典个人博客模板</title>
+<title>燕子的——古典个人博客模板</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="css/styles.css" rel="stylesheet">
@@ -15,8 +15,8 @@
 	<embed src="http://pic.ibaotu.com/00/21/48/31X888piCcxU.mp3" hidden="true" autostart="true" loop="true">
   <header>
     <div class="toptitle">
-      <h1>钦点小西</h1>
-      <p class="byline">——文小西</p>
+      <h1>心若尘 淡若禅</h1>
+      <p class="byline">——小燕子</p>
     </div>
     <object id="swftitlebar" data="images/79514.swf" width="100%" height="220" type="application/x-shockwave-flash">
       <param name="allowScriptAccess" value="always">
@@ -33,17 +33,17 @@
     <div class="vcard box">
       <h2>个人资料</h2>
       <img src="images/180.jpg" class="photo">
-      <p class="fn">姓名：文茜</p>
-      <p class="nickname">网名：Smile小西 | 钦点小西</p>
+      <p class="fn">姓名：张维燕</p>
+      <p class="nickname">网名：Smile小燕子 | 心若尘 淡若禅</p>
       <p class="url">主页：http://wenxiaoxi.club/</p>
-      <p class="address">现居：四川省—成都市</p>
+      <p class="address">现居：四川省—广安市</p>
       <p class="role">职业：网站设计、网站制作</p>
     </div>
     <div class="blogclass box">
       <h2>博客分类</h2>
       <ul>
         <li><a href="/">慢生活(3)</a></li>
-        <li><a href="/">程序人生(25)</a></li>
+        <li><a href="/">佛系人生(25)</a></li>
         <li><a href="/">经典美文(39)</a></li>
       </ul>
     </div>
